--- a/src/main/resources/templates/codegen/api.ts.vm
+++ b/src/main/resources/templates/codegen/api.ts.vm
@@ -1,6 +1,6 @@
 import request from "@/utils/request";
 
-const ${entityName.toUpperCase()}_BASE_URL = "/api/v1/${lowerFirstEntityName}s";
+const ${entityName.toUpperCase()}_BASE_URL = "/api/v1/${kebabCaseEntityName}";
 
 const ${entityName}API = {
     /** 获取${businessName}分页数据 */
@@ -14,8 +14,8 @@ const ${entityName}API = {
     /**
      * 获取${businessName}表单数据
      *
-     * @param id ${entityName}ID
-     * @returns ${entityName}表单数据
+     * @param id ${businessName}ID
+     * @returns ${businessName}表单数据
      */
     getFormData(id: number) {
         return request<any, ${entityName}Form>({
@@ -24,26 +24,30 @@ const ${entityName}API = {
         });
     },
 
-    /** 添加${businessName}*/
-    add(data: ${entityName}Form) {
+    /**
+     *  添加${businessName}
+     *
+     *  @param data ${businessName}表单数据
+     */
+    create(data: ${entityName}Form) {
         return request({
             url: `${${entityName.toUpperCase()}_BASE_URL}`,
             method: "post",
-            data: data,
+            data,
         });
     },
 
     /**
      * 更新${businessName}
      *
-     * @param id ${entityName}ID
-     * @param data ${entityName}表单数据
+     * @param id ${businessName}ID
+     * @param data ${businessName}表单数据
      */
-     update(id: number, data: ${entityName}Form) {
+     update(id: string, data: ${entityName}Form) {
         return request({
             url: `${${entityName.toUpperCase()}_BASE_URL}/${id}`,
             method: "put",
-            data: data,
+            data,
         });
     },
 
