--- a/src/main/resources/templates/codegen/entity.java.vm
+++ b/src/main/resources/templates/codegen/entity.java.vm
@@ -3,10 +3,13 @@ package ${packageName}.${moduleName}.${subpackageName};
 import lombok.Getter;
 import lombok.Setter;
 #if(${hasLocalDateTime})
+import java.time.LocalDateTime;
 #end
 #if(${hasBigDecimal})
+import java.math.BigDecimal;
 #end
 import com.baomidou.mybatisplus.annotation.TableName;
+import com.youqusoft.vision.flow.common.base.BaseEntity;
 
 /**
  * $!{businessName}实体对象
