--- a/src/main/resources/templates/codegen/index.vue.vm
+++ b/src/main/resources/templates/codegen/index.vue.vm
@@ -1,10 +1,10 @@
 <template>
   <div class="app-container">
-    <div class="search-bar">
+    <div class="search-container">
       <el-form ref="queryFormRef" :model="queryParams" :inline="true">
-          #foreach($fieldConfig in $fieldConfigs)
-              #if($fieldConfig.isShowInQuery == 1)
-                <el-form-item label="$fieldConfig.fieldComment" prop="$fieldConfig.fieldName">
+        #foreach($fieldConfig in $fieldConfigs)
+          #if($fieldConfig.isShowInQuery == 1)
+            <el-form-item label="$fieldConfig.fieldComment" prop="$fieldConfig.fieldName">
                     #if($fieldConfig.formType == "INPUT")
                       <el-input
                           v-model="queryParams.$fieldConfig.fieldName"
@@ -13,8 +13,8 @@
                           @keyup.enter="handleQuery()"
                       />
                     #elseif($fieldConfig.formType == "SELECT")
-                        #if($fieldConfig.dictType != "")
-                          <dict v-model="queryParams.$fieldConfig.fieldName" code="$fieldConfig.dictType" />
+                        #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+                          <Dict v-model="queryParams.$fieldConfig.fieldName" code="$fieldConfig.dictType" />
                         #else
                           <el-select v-model="queryParams.$fieldConfig.fieldName" placeholder="请选择$fieldConfig.fieldComment">
                             <el-option :key="1" :value="1" label="选项一"/>
@@ -22,15 +22,23 @@
                           </el-select>
                         #end
                     #elseif($fieldConfig.formType == "RADIO")
-                      <el-radio-group v-model="queryParams.$fieldConfig.fieldName">
-                        <el-radio :key="1" :label="1">选项一</el-radio>
-                        <el-radio :key="2" :label="2">选项二</el-radio>
-                      </el-radio-group>
+                        #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+                          <Dict v-model="queryParams.$fieldConfig.fieldName" type="radio" code="$fieldConfig.dictType" />
+                        #else
+                          <el-radio-group v-model="queryParams.$fieldConfig.fieldName">
+                            <el-radio :key="1" :value="1">选项一</el-radio>
+                            <el-radio :key="2" :value="2">选项二</el-radio>
+                          </el-radio-group>
+                        #end
                     #elseif($fieldConfig.formType == "CHECK_BOX")
-                      <el-checkbox-group v-model="queryParams.$fieldConfig.fieldName">
-                        <el-checkbox :key="1" :label="1">选项一</el-checkbox>
-                        <el-checkbox :key="2" :label="2">选项二</el-checkbox>
-                      </el-checkbox-group>
+                        #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+                          <Dict v-model="queryParams.$fieldConfig.fieldName" type="checkbox" code="$fieldConfig.dictType" />
+                        #else
+                          <el-checkbox-group v-model="queryParams.$fieldConfig.fieldName">
+                            <el-checkbox :key="1" :label="1">选项一</el-checkbox>
+                            <el-checkbox :key="2" :label="2">选项二</el-checkbox>
+                          </el-checkbox-group>
+                        #end
                     #elseif($fieldConfig.formType == "INPUT_NUMBER")
                       <el-input-number
                           v-model="queryParams.$fieldConfig.fieldName"
@@ -77,18 +85,12 @@
                           value-format="YYYY-MM-DD"
                       />
                     #end
-                </el-form-item>
-              #end
+            </el-form-item>
           #end
-        <el-form-item>
-          <el-button type="primary" @click="handleQuery">
-            <template #icon><Search /></template>
-            搜索
-          </el-button>
-          <el-button @click="handleResetQuery">
-            <template #icon><Refresh /></template>
-            重置
-          </el-button>
+        #end
+        <el-form-item class="search-buttons">
+          <el-button type="primary" icon="search" @click="handleQuery">搜索</el-button>
+          <el-button icon="refresh" @click="handleResetQuery">重置</el-button>
         </el-form-item>
       </el-form>
     </div>
@@ -96,64 +98,68 @@
     <el-card shadow="never">
       <div class="mb-10px">
         <el-button
-            v-hasPerm="['${moduleName}:${lowerFirstEntityName}:add']"
+            v-hasPerm="['${moduleName}:${kebabCaseEntityName}:add']"
             type="success"
+            icon="plus"
             @click="handleOpenDialog()"
-        >
-          <template #icon><Plus /></template>
-          新增
-        </el-button>
+        >新增</el-button>
         <el-button
-            v-hasPerm="['${moduleName}:${lowerFirstEntityName}:delete']"
+            v-hasPerm="['${moduleName}:${kebabCaseEntityName}:delete']"
             type="danger"
             :disabled="removeIds.length === 0"
+            icon="delete"
             @click="handleDelete()"
-        >
-          <template #icon><Delete /></template>
-          删除
-        </el-button>
+        >删除</el-button>
       </div>
 
       <el-table
-          ref="dataTableRef"
-          v-loading="loading"
-          :data="pageData"
-          highlight-current-row
-          border
-          @selection-change="handleSelectionChange"
+        ref="dataTableRef"
+        v-loading="loading"
+        :data="pageData"
+        highlight-current-row
+        border
+        @selection-change="handleSelectionChange"
       >
         <el-table-column type="selection" width="55" align="center" />
-          #foreach($fieldConfig in $fieldConfigs)
-              #if($fieldConfig.isShowInList == 1)
-                <el-table-column
-                    key="$fieldConfig.fieldName"
-                    label="$fieldConfig.fieldComment"
-                    prop="$fieldConfig.fieldName"
-                    min-width="150"
-                    align="center"
-                />
-              #end
+        #foreach($fieldConfig in $fieldConfigs)
+          #if($fieldConfig.isShowInList == 1)
+            #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+              <el-table-column label="$fieldConfig.fieldComment" width="150" align="center">
+                <template #default="scope">
+                  <DictLabel v-model="scope.row.$fieldConfig.fieldName" code="$fieldConfig.dictType" />
+                </template>
+              </el-table-column>
+            #else
+              <el-table-column
+                key="$fieldConfig.fieldName"
+                label="$fieldConfig.fieldComment"
+                prop="$fieldConfig.fieldName"
+                min-width="150"
+                align="center"
+              />
+            #end
           #end
+        #end
         <el-table-column fixed="right" label="操作" width="220">
           <template #default="scope">
             <el-button
-                v-hasPerm="['${moduleName}:${lowerFirstEntityName}:edit']"
+                v-hasPerm="['${moduleName}:${kebabCaseEntityName}:edit']"
                 type="primary"
                 size="small"
                 link
+                icon="edit"
                 @click="handleOpenDialog(scope.row.id)"
             >
-              <template #icon><Edit /></template>
               编辑
             </el-button>
             <el-button
-                v-hasPerm="['${moduleName}:${lowerFirstEntityName}:delete']"
+                v-hasPerm="['${moduleName}:${kebabCaseEntityName}:delete']"
                 type="danger"
                 size="small"
                 link
+                icon="delete"
                 @click="handleDelete(scope.row.id)"
             >
-              <template #icon><Delete /></template>
               删除
             </el-button>
           </template>
@@ -178,7 +184,7 @@
     >
       <el-form ref="dataFormRef" :model="formData" :rules="rules" label-width="100px">
           #foreach($fieldConfig in $fieldConfigs)
-              #if($fieldConfig.isShowInForm == 1)
+              #if($fieldConfig.isShowInForm == 1 && $fieldConfig.formType != "HIDDEN")
                 <el-form-item label="$fieldConfig.fieldComment" prop="$fieldConfig.fieldName">
                     #if($fieldConfig.formType == "INPUT")
                       <el-input
@@ -186,8 +192,8 @@
                           placeholder="$fieldConfig.fieldComment"
                       />
                     #elseif($fieldConfig.formType == "SELECT")
-                        #if($fieldConfig.dictType != "")
-                          <dict v-model="formData.$fieldConfig.fieldName" code="$fieldConfig.dictType" />
+                        #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+                          <Dict v-model="formData.$fieldConfig.fieldName" code="$fieldConfig.dictType" />
                         #else
                           <el-select v-model="formData.$fieldConfig.fieldName" placeholder="请选择$fieldConfig.fieldComment">
                             <el-option :value="0" label="选项一"/>
@@ -195,15 +201,23 @@
                           </el-select>
                         #end
                     #elseif($fieldConfig.formType == "RADIO")
-                      <el-radio-group v-model="formData.$fieldConfig.fieldName">
-                        <el-radio :value="0">选项一</el-radio>
-                        <el-radio :value="1">选项二</el-radio>
-                      </el-radio-group>
+                        #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+                          <Dict v-model="queryParams.$fieldConfig.fieldName" type="radio" code="$fieldConfig.dictType" />
+                        #else
+                          <el-radio-group v-model="formData.$fieldConfig.fieldName">
+                            <el-radio :value="0">选项一</el-radio>
+                            <el-radio :value="1">选项二</el-radio>
+                          </el-radio-group>
+                        #end
                     #elseif($fieldConfig.formType == "CHECK_BOX")
-                      <el-checkbox-group v-model="formData.$fieldConfig.fieldName">
-                        <el-checkbox :value="0">选项一</el-checkbox>
-                        <el-checkbox :value="1">选项二</el-checkbox>
-                      </el-checkbox-group>
+                        #if($fieldConfig.dictType && $fieldConfig.dictType.trim() != "")
+                          <Dict v-model="queryParams.$fieldConfig.fieldName" type="checkbox" code="$fieldConfig.dictType" />
+                        #else
+                          <el-checkbox-group v-model="formData.$fieldConfig.fieldName">
+                            <el-checkbox :value="0">选项一</el-checkbox>
+                            <el-checkbox :value="1">选项二</el-checkbox>
+                          </el-checkbox-group>
+                        #end
                     #elseif($fieldConfig.formType == "INPUT_NUMBER")
                       <el-input-number
                           v-model="formData.$fieldConfig.fieldName"
@@ -237,6 +251,9 @@
                       />
                     #end
                 </el-form-item>
+
+              #elseif($fieldConfig.formType == "HIDDEN")
+                <el-input type="hidden" v-model="formData.$fieldConfig.fieldName" />
               #end
           #end
       </el-form>
@@ -256,10 +273,10 @@
     inheritAttrs: false,
   });
 
-  import ${entityName}API, { ${entityName}PageVO, ${entityName}Form, ${entityName}PageQuery } from "@/api/${moduleName}/${kebabCaseEntityName}";
+  import ${entityName}API, { ${entityName}PageVO, ${entityName}Form, ${entityName}PageQuery } from "@/api/${moduleName}/${kebabCaseEntityName}-api";
 
-  const queryFormRef = ref(ElForm);
-  const dataFormRef = ref(ElForm);
+  const queryFormRef = ref();
+  const dataFormRef = ref();
 
   const loading = ref(false);
   const removeIds = ref<number[]>([]);
